Fixed parallax slide z-index bug

--- a/src/sass/transitions/slide.sass
+++ b/src/sass/transitions/slide.sass
@@ -44,3 +44,6 @@
 
 .slide-parallax-push-leave-active, .slide-parallax-pop-enter-active
   @include transition-overlay
+
+.slide-parallax-pop-leave-active
+  z-index: 2
